<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">HelloAndroid-PADC-X</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_hello_text_view">Hello TextView</string>
    <string name="btn_lbl_go_to_container_component_activity">Go to ContainerComponent Activity</string>
    <string name="btn_lbl_go_to_views_activity">Go to Views Activity</string>
    <string name="toolbar_title_views">Views</string>
    <string name="iv_description">This is image view</string>
    <string name="btn_lbl_random_greeting">Random Greeting</string>
    <string name="cb_txt_banana">Banana</string>
    <string name="cb_txt_apple">Apple</string>
    <string name="cb_txt_mango">Mango</string>
    <string name="btn_lbl_check_fruit">Check Fruit</string>
    <string name="radio_gender_male">Male</string>
    <string name="radio_gender_female">Female</string>
    <string name="alert_title_fruit">Your Fruits</string>
    <string name="txt_sample_value_name">John T.Lord</string>
    <string name="txt_lbl_sample_value_positon">Mobile App Developer</string>
    <string name="txt_value_sample_quote">\"I love Code for Good\"</string>
    <string name="btn_lbl_go_to_ui_components">Go To UI Components</string>
    <string name="lbl_off">OFF</string>
    <string name="lbl_on">ON</string>
    <string name="lbl_guest_room_light">Guest room light :</string>
    <string name="lbl_door_lock">Door Lock :</string>
    <string name="door_lock_open">open</string>
    <string name="door_lock_close">close</string>
    <string name="lbl_brightness">Brightness of the light</string>
    <string name="lbl_how_much_you_love_the_room">How much do you love the room ?</string>
    <string name="lbl_shower_loading">Loading the shower</string>
    <string name="lbl_lunch_selection">Select your lunch selection</string>
    <string name="lbl_additional_drinks">Select your additional drinks</string>
    <string name="btn_select_date">Select Date</string>
    <string name="format_selected_date">Your selected date :</string>
    <string name="btn_select_time">Select Time to check-out</string>
    <string name="format_selected_time">Your selected time :</string>
    <string name="txtCredits">Support: <a href="http://www.stackoverflow.com">click here</a></string>
    <string name="lbl_select_image">Select Image</string>
    <string name="lbl_show_direction_to_shwedagon_pagoda">Direction to Shwe Dagon Pagoda</string>
    <string name="lbl_return">Return</string>
    <string name="btn_lbl_other_common_ui_elements">Other Common UI Elements</string>
    <string name="btn_lbl_set_timer_for_next_5_seconds">Set Timer for Next 5 Seconds</string>
    <string name="btn_add_event">Add Event</string>
    <string name="btn_lbl_call_mom">Call Mom</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_lbl_select_a_contact_and_show">Select a contact and show</string>
    <string name="txt_lbl_selected_value">Selected Value</string>
    <string name="btn_lbl_web_search_android">Web Search - Android</string>
    <string name="btn_lbl_go_to_collpasing_toolbar">Go To Collpasing Toolbar</string>
    <string name="btn_lbl_go_to_tablayout">Go To TabLayout</string>
    <string name="btn_lbl_go_to_navigation_vew">Go to Navigation Vew</string>
    <string-array name="lunch_selection">
        <item>Apple</item>
        <item>Orange</item>
        <item>Mango</item>
    </string-array>
    <string-array name="additional_drinks">
        <item>Coke</item>
        <item>Lemon</item>
        <item>Beer</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="txt_sample_value_hello_navigation">Hello Navigation</string>
    <string name="btn_lbl_go_to_constraintlayout">Go To ConstraintLayout</string>
    <string name="lbl_location_name">PADC Myanmar</string>
    <string name="rating_value">4.0</string>
    <string name="lbl_distance">2 min away</string>
    <string name="lbl_address">No 412 4B GoldenGate Tower, Upper Pazundaung Township</string>
    <string name="lbl_contact_phone">09256443072</string>
    <string name="lbl_access_time">Sat, Sun 9:00 AM to 6:00 PM</string>
    <string name="btn_lbl_process_payment">Continue Navigation</string>
</resources>