<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:padding="@dimen/margin_medium"
            android:fontFamily="serif"
            android:textColor="#20FF0000"
            android:layout_centerInParent="true"
            tools:text="@string/lbl_hello_text_view" />
        <ImageView
            android:id="@+id/ivGreeting"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_below="@id/tvHello"
            android:layout_marginStart="@dimen/margin_medium"
            android:contentDescription="@string/iv_description"
            android:scaleType="centerCrop"
            android:src="@drawable/holadios"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <Button
            android:id="@+id/btnRandomGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivGreeting"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_lbl_random_greeting" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_below="@id/ivGreeting"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_toEndOf="@id/btnRandomGreeting"
            android:src="@drawable/ic_info_gray_24dp" />

        <CheckBox
            android:id="@+id/cbBanana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRandomGreeting"
            android:layout_margin="@dimen/margin_medium"
            android:checked="true"
            android:text="@string/cb_txt_banana" />

        <CheckBox
            android:id="@+id/cbApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRandomGreeting"
            android:layout_margin="@dimen/margin_medium"
            android:layout_toEndOf="@id/cbBanana"
            android:text="@string/cb_txt_apple" />

        <CheckBox
            android:id="@+id/cbMango"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRandomGreeting"
            android:layout_margin="@dimen/margin_medium"
            android:layout_toEndOf="@id/cbApple"
            android:text="@string/cb_txt_mango" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnCheckFruit"
            android:ems="10"
            android:hint="your name please"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btnCheckFruit"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbBanana"
            android:text="@string/btn_lbl_check_fruit" />

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:layout_margin="@dimen/margin_large"
            android:checked="true"
            android:text="@string/radio_gender_male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:layout_margin="@dimen/margin_large"
            android:layout_toEndOf="@id/radioMale"
            android:text="@string/radio_gender_female" />


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>